# sydney-property-recommendation-website

./: .gitignore  DEPLOYMENT.md  GITHUB_ACTIONS_SETUP.md  render.yaml
.github/workflows/: frontend-ci.yml  vercel-deploy.yml
mlops-training-backend/: .env.example  .gitignore  README.md  pyproject.toml
mlops-training-backend/_source_artifacts/user_preference_model/: synthetic_browsing_events.csv
mlops-training-backend/mlops_backend/: __init__.py  app.py  clearml_utils.py  config.py  data_contract.py  model_registry.py  pipeline.py  ranking.py  supabase_io.py  training.py
mlops-training-backend/mlops_backend/features/: __init__.py  common.py  review_rating.py  user_preference.py
mlops-training-backend/scripts/: local_ranking_backend.mjs  run_once.py  serve.py
mlops-training-backend/tests/: test_data_contract.py  test_model_registry.py  test_user_preference_features.py
stay-scout/: .env.example  .gitignore  LOCAL_SETUP.md  package-lock.json  package.json  vite.config.ts
stay-scout/scripts/: smoke-test.mjs
stay-scout/src/: routeTree.gen.ts
stay-scout/src/components/: AvatarMenu.tsx  BecomeHostModal.tsx  FilterPanel.tsx  ListingCard.tsx  LoginGateModal.tsx  RotatingPrompt.tsx  TravelTypeModal.tsx
stay-scout/src/hooks/: use-auth.ts
stay-scout/src/lib/: listings.functions.ts
stay-scout/src/routes/: __root.tsx  index.tsx  listing.$id.tsx  published.tsx  saved.tsx
stay-scout/supabase/: config.toml
stay-scout/supabase/migrations/: 20260520124621_23a8befc-1d2f-4d21-af3e-7959d7811d0a.sql  20260520125033_9d740f96-730c-4508-bae3-a155204a6a05.sql  (+14 more)
(+1 files in other folders)
