[project]
name = "stay-scout-mlops-backend"
version = "0.1.0"
description = "Standalone Supabase-to-ClearML training backend for Stay Scout review rating and user preference models."
requires-python = ">=3.11"
dependencies = [
  "apscheduler>=3.10",
  "certifi>=2024.0",
  "clearml>=1.16",
  "fastapi>=0.115",
  "joblib>=1.4",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "python-dotenv>=1.0",
  "scikit-learn>=1.4",
  "supabase>=2.6",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
